publishing awesome pages 1590490932146

--- a/about.html
+++ b/about.html
@@ -36,13 +36,24 @@
     <section id="main">
       <div class="container">
         <article id="main-col">
-          <h1 class="page-title">About Us</h1>
-          <p> KK wealth management is a subsidiary part of "k" groups of companies.
+          <h1class="page-title"> <strong> About Us </strong> </h1>
+          <p> KK wealth management is a subsidiary part of "k" groups of companies
+        & Kk is derived from our ceo and founder Mr.Kuldeep Kore 
+          
           </p>
           <p class="dark">
           </p>
         </article>
-
+        <div class="container">
+        <div class="box">
+          <h3> <strong>  Get to know about myself.</strong></h3> 
+          <img src="./img/about.jpg">
+          <p>  The founder Mr.Kuldeep Kore is a CFA and Financial Expert of market.
+          He was previously Head Executive at Proventure Capital. He rolling himself
+          and the entire organisation towards making our client dream come true.
+          
+  </p>
+        </div>
         <aside id="sidebar">
           <div class="dark">
             <h3>What We Do</h3>
